DTGB-446: Fixed spacing issue in footer for IE11.

--- a/components/41-organisms/footer/_footer.scss
+++ b/components/41-organisms/footer/_footer.scss
@@ -114,7 +114,7 @@ footer.footer {
   .db-block-partnership {
     justify-content: center;
     width: 100%;
-    min-height: 2rem;
+    height: 2rem;
 
     @include tablet {
       justify-content: start;
